@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST xfprint-4.5.92.tar.bz2 848627 RMD160 b406d69eff71369ecf3bf88a907906c2e50357e1 SHA1 e0b30252a7d210eaa09c6044d3943d06ede0214e SHA256 4013fd40f948abae0b547be31bc0d73fd7df5619be2483afb1bd3cca9264790a
-EBUILD xfprint-4.5.92.ebuild 792 RMD160 a325201f566fa4598cb7e0ba0a868cf328f89db1 SHA1 3e5d0f6a05006185fae93749fa34f3537d6ac1a9 SHA256 e2f153dc3d7ece721e4458ae12e8032f14cfc504c15531ce8a319f91de09ff27
-EBUILD xfprint-9999.ebuild 792 RMD160 a325201f566fa4598cb7e0ba0a868cf328f89db1 SHA1 3e5d0f6a05006185fae93749fa34f3537d6ac1a9 SHA256 e2f153dc3d7ece721e4458ae12e8032f14cfc504c15531ce8a319f91de09ff27
-MISC ChangeLog 549 RMD160 31a9cbf9baf902fd332f1e27944db635a0c800ad SHA1 e52e9b42a2d6265a5b167ca7b1fc58c1d84260d8 SHA256 eaa8384337a76ff1851346f6d047667952f633ddcd712d2736806ac745321eda
+EBUILD xfprint-4.5.92.ebuild 875 RMD160 6bae4a7bc82472abd07e1f10e5cb798905e11047 SHA1 09e0a0e97e0f8bdbd83f0c53f434954ae538a14c SHA256 22b654310e1eb2aa1d2a2b4f5fcb99089c86d2a4ae9a5cfb78df46be08a56871
+EBUILD xfprint-9999.ebuild 875 RMD160 6bae4a7bc82472abd07e1f10e5cb798905e11047 SHA1 09e0a0e97e0f8bdbd83f0c53f434954ae538a14c SHA256 22b654310e1eb2aa1d2a2b4f5fcb99089c86d2a4ae9a5cfb78df46be08a56871
+MISC ChangeLog 713 RMD160 3b2a94ad299d99d24e20c223d5766e2283abfeaf SHA1 0e66c33d7d8b1f5c7397ec6642059a49e685a3a4 SHA256 56dffdea491e60ab9eb9cf973ded369ff76e8b1e0ce34cfc4aa9a755af2f3eb4
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkdtc4ACgkQKhnDs22gwa9rrgCg2vw6QLOJFLZP/sHmsIBbVKN+
-4UkAn1zSOSfdJO1ql2veeYj3hAJvvDPS
-=B0oR
+iEYEARECAAYFAkk5ZKMACgkQKhnDs22gwa+C0QCg8aZAATzfu6MFeMT6fTR3zJzF
+csAAoJNcN0Y/yHBi5tQ67XUSRd2Ei9jZ
+=r3Af
 -----END PGP SIGNATURE-----
